--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Mac OS
+.DS_Store
+
+# Debug file of VS Code
+debug*
